--- a/src/pages/SignUpPage/SignUpPage.module.sass
+++ b/src/pages/SignUpPage/SignUpPage.module.sass
@@ -1,7 +1,7 @@
 @import './../../common/styles/_templates';
 @import './../../common/styles/_vars';
     
-.loginPage
+.signupPage
     @extend %common-container
     justify-content: center
     flex-direction: column
@@ -9,15 +9,23 @@
     max-width: 1600px
     width: 100%
     min-width: 320px
-    height: 90vh
     background: $backgroundColor
 
-.headerLoginText
-    margin-bottom: 35px
-    margin-top: 107px
+.headersignupText
     font-size: 38px
     text-align: center
     font-weight: bold
     color: $textColor
+    margin-top: 105px
     padding-left: 20px
     padding-right: 20px
+
+.signupText
+    width: 45%
+    font-size: 22px
+    color: $textColor
+    text-align: center
+    font-weight: 500
+    line-height: 27px
+    margin-top: 20px
+    margin-bottom: 30px
