--- a/src/components/Input/Input.module.sass
+++ b/src/components/Input/Input.module.sass
@@ -5,28 +5,33 @@
     @extend %common-container
     justify-content: center
     flex-direction: column
-    flex-wrap: nowrap
-    width: 45%
-    margin-bottom: 20px
+    flex-wrap: wrap
+    width: 47%
+    margin-bottom: 32px
     position: relative
     
 .input
     width: 100%
     height: 70px
     border-color: $textColor
-    margin-bottom: 5px
+    margin-bottom: 3px
+
+@media screen and (max-width: 576px)
+    .inputBox
+        margin-bottom: 65px
+
+.validInput
+    border: 2px solid #5daf5d
 
 .invalidInput
     border: 2px solid #FF0000
 
 .errorMessage
-    // @extend %common-container
-    // justify-content: center
-    // width: 100%
-    // text-align: center
-    // border: 0.7px solid #FF0000
-    // color: $textColor
+    @extend %common-container
+    justify-content: center
     width: 100%
+    max-height: 70px
+    min-height: 10px
     color: $textColor
     font-size: 13px
     margin: 1px 0
@@ -36,3 +41,8 @@
     position: absolute
     top: 100%
     left: 0%
+
+@media screen and (max-width: 576px)
+    .errorMessage
+        width: 110%
+        left: -5%
